# Nanites

./: .gitignore  Readme.md  docker-compose.yml
backend/: .dockerignore  .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 6a5f7c426631_embedding_chunks.py  7159fe8ee2b7_create_users_table.py  ef0f657b5149_added_nodes.py
backend/app/: main.py
backend/app/core/: config.py  dependencies.py  exceptions.py  security.py
backend/app/db/: registry.py  session.py
backend/app/features/auth/: dependencies.py  router.py  schema.py  service.py
backend/app/features/embeddings/: models.py  service.py
backend/app/features/nodes/: models.py  router.py  schema.py  service.py
backend/app/features/users/: models.py  router.py  schema.py  service.py
backend/app/ml/: model.py
backend/app/workers/: embed.py  settings.py
backend/scripts/: seed.py
